一覧のレスポンスから詳細用の項目を落とした
